--- a/pom.xml
+++ b/pom.xml
@@ -397,7 +397,7 @@
                 </configuration>
             </plugin>
 
-            <plugin>
+         <!--   <plugin>
                 <groupId>ro.isdc.wro4j</groupId>
                 <artifactId>wro4j-maven-plugin</artifactId>
                 <version>${wro4j.version}</version>
